<resources>
    <string name="app_name">Watcho</string>
    <string name="top_10_shows">Top 10 Shows on Watcho</string>
    <string name="text_watcho_originals">Watcho Originals</string>
    <string name="watcho_spotlight">Watcho Spotlight</string>
    <string name="text_musical_videos">Watcho Musical Videos</string>
    <string name="text_trailers">Bollywood Movie Trailers</string>
    <string name="text_plays">Watcho Plays</string>
    <string name="text_dish_auditions">Dish TV Auditions</string>
    <string name="home">Home</string>
    <string name="downloads">Downloads</string>
    <string name="browse">Browse</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="text_creators">Watcho Creators</string>
    <string name="choose">Choose</string>
    <string name="review" translatable="false">Review</string>
    <string name="congrats" translatable="false">Congratulations!</string>
    <string name="you_earned" translatable="false">You earned a coin</string>
    <string name="add_a_review" translatable="false">Rate or Review to earn more.</string>
    <string name="thanku" translatable="false">Thank you</string>
    <string name="we_value" translatable="false">We value your reviews</string>
    <string name="rate" translatable="false">RATE</string>
    <string name="cancel" translatable="false">@android:string/cancel</string>
    <string name="submit" translatable="false">SUBMIT</string>
    <string name="action" translatable="false">Action</string>
    <string name="biopic" translatable="false">Biopic</string>
    <string name="chat_shows" translatable="false">Chat Shows</string>
    <string name="comedy" translatable="false">Comedy</string>
    <string name="crime" translatable="false">Crime</string>
    <string name="documentary" translatable="false">Documentary</string>
    <string name="drama" translatable="false">Drama</string>
    <string name="family" translatable="false">Family</string>
    <string name="horror" translatable="false">Horror</string>
    <string name="kids" translatable="false">Kids</string>
    <string name="lifestyle" translatable="false">Lifestyle</string>
    <string name="reality" translatable="false">Reality</string>
    <string name="romance" translatable="false">Romance</string>
    <string name="science" translatable="false">Science</string>
    <string name="sports" translatable="false">Sports</string>
    <string name="thriller" translatable="false">Thriller</string>
    <string name="vlog" translatable="false">Vlog</string>
    <string name="genre" translatable="false">Genre</string>
    <string name="language">Language</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="tamil">Tamil</string>
    <string name="kannada">Kannada</string>
    <string name="sms_msg" translatable="false">Download the Watcho App now to watch quality shows and showcase your talent.
    \n Use code WATCHO1234 to join and earn coins.</string>


    <string-array name="pop_shows">
        <item>Ardhsatya</item>
        <item>Baal Baal Bache</item>
        <item>Chhoriyan</item>
        <item>Dark Destinations</item>
        <item>Four Thieves</item>
        <item>Girl Tribe</item>
        <item>Its my pleasure</item>
        <item>Jokeistan</item>
        <item>Love Crisis</item>
        <item>Release</item>
        <item>Sentimentals</item>
        <item>Sinderella</item>
        <item>The Mortuary</item>
        <item>What the Folks</item>


    </string-array>


    <string name="premium" translatable="false">Premium</string>
    <string name="shows" translatable="false">Shows</string>
    <string name="channels" translatable="false">Channels</string>
    <string name="news" translatable="false">News</string>
    <string name="spotlight" translatable="false">Spotlight</string>
    <string name="customer_support" translatable="false">Customer Support</string>
    <string name="friends" translatable="false">My Friends</string>
    <string name="nothing_to_show" translatable="false">Nothing to Show</string>
    <string name="download_fav" translatable="false">Download shows to watch them offline</string>
    <string name="buy" translatable="false">Buy Premium</string>
    <string name="cast" translatable="false">Broadcast</string>
    <string name="user" translatable="false">User</string>
    <string name="pay_premium" translatable="false">Pay for Premium content</string>
    <string name="ott" translatable="false">OTT</string>
    <string name="user_login" translatable="false">User Login</string>
    <string name="split_screen" translatable="false">Split Screen</string>
    <string name="my_room" translatable="false">My Room</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="four_thieves" translatable="false">4 Thieves</string>
    <string name="invite_frnds" translatable="false">Invite Friends</string>
    <string name="cont_num" translatable="false">Contact Number</string>
    <string name="select_cont" translatable="false">Select Contacts</string>
    <string name="enter_count" translatable="false">Enter Count</string>
    <string name="send_sms" translatable="false">SMS</string>
    <string name="whatsapp" translatable="false">Whatsapp</string>
    <string name="invite_" translatable="false">Invite</string>
    <string name="invite_1" translatable="false">Invite your friends and earn coins</string>
    <string name="add_video" translatable="false">Add Video</string>
    <string name="change_lang">Change Language</string>
    <string name="see_what" translatable="false">See what others have to say!</string>
    <string name="enter_query" translatable="false">Enter your query here</string>
    <string name="add" translatable="false">Add</string>

    <string name="user_1" translatable="false">Radhika Bawa</string>
    <string name="user_2" translatable="false">Jayansh Jain</string>
    <string name="user_3" translatable="false">Vihan Bhalla</string>
    <string name="user_4" translatable="false">User</string>

    <string name="ans_1" translatable="false">The content is geo-restricted and available only in India.</string>
    <string name="ans_2" translatable="false">We have ABR enabled on Watcho, due to bandwidth it auto-adjusts and play only audio. Please connect with Wifi or use the application in better network reception</string>
    <string name="ans_3" translatable="false"> It takes couple of minutes for the system to process and enable the entitlements.</string>
    <string name="ans_4" translatable="false"> </string>

    <string name="q_1" translatable="false">Unable to play content in our region.</string>
    <string name="q_2" translatable="false">Video is not playing, only black screen is displaying with the audio</string>
    <string name="q_3" translatable="false">Paid for subscription but the content is not playing</string>
    <string name="q_4" translatable="false"> </string>
    <string name="write_msg" translatable="false">Write your message here</string>
    <string name="send" translatable="false">Send</string>
    <string name="this_is_your_10th_video_and_your_rank_is_4" translatable="false">This is your 10th video and your rank is 4!</string>
    <string name="upload_more_to_improve_rank" translatable="false">Upload more to improve rank!!</string>
    <string name="happy_creating" translatable="false">Happy Creating!</string>
    <string name="add_frnds" translatable="false">Add Friends</string>
    <string name="sort" translatable="false">Sort</string>
    <string name="watch_list" translatable="false">WatchList</string>


</resources>
