<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="10dp"
    android:text="@string/genre"
    android:textColor="@color/white"
    android:textSize="20sp"
    android:textStyle="normal"
    />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/white"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biopic"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/white"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_shows"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/white"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comedy"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/white"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crime"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/white"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/documentary"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/white"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:text="@string/drama"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/white"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/white"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horror"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/white"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kids"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/white"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lifestyle"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/white"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reality"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/white"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/romance"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/white"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          android:text="@string/science"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/white"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/white"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thriller"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/white"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vlog"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/white"/>

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/language"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >

    <com.google.android.material.chip.Chip
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:text="@string/hindi"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        app:chipBackgroundColor="@color/white"/>

    <com.google.android.material.chip.Chip
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:text="@string/english"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        app:chipBackgroundColor="@color/white"/>

    <com.google.android.material.chip.Chip
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tamil"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        app:chipBackgroundColor="@color/white"/>

    <com.google.android.material.chip.Chip
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kannada"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        app:chipBackgroundColor="@color/white"/>
    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/btn_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_gravity="bottom"
        android:background="@drawable/curved_btn"
        android:text="@string/sort"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAllCaps="true"/>
</LinearLayout>