<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/black"
    app:cardElevation="10dp"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:paddingBottom="30dp">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/coin_gif"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/coin_b" />

    <TextView
        android:id="@+id/text_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congrats"
        android:layout_gravity="center_horizontal"
        android:textStyle="normal"
        android:fontFamily="@font/roboto_medium"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/text_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_earned"
        android:layout_gravity="center_horizontal"
        android:textStyle="normal"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/grey_w"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/text_sub_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_a_review"
        android:layout_gravity="center_horizontal"
        android:textStyle="normal"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/grey_w"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"/>


<Button
    android:id="@+id/btn_rate"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/curved_btn"
    android:backgroundTintMode="screen"
    android:text="@string/rate"
    android:textStyle="normal"
    android:textSize="20sp"
    android:textColor="@color/white"
    android:fontFamily="@font/roboto_medium"
    android:textAlignment="center"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>


