<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InviteFriends"
    android:background="@color/black">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/coin_gif"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/invite_gif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/invite_"
        android:textColor="@color/white"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/invite_1"
        android:textColor="@color/grey_w"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical">

<!--        <EditText-->
<!--            android:id="@+id/txt_message"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:gravity="center"-->
<!--            android:hint="Enter Message"-->
<!--            android:textSize="18sp" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txt_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:textColorHint="@color/grey_w"
                android:hint="@string/cont_num"
                android:textColor="@color/white"
                android:inputType="text" />

            <Button
                android:id="@+id/button_choose_contacts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:layout_weight="1"
                android:text="@string/select_cont"
                android:background="#FAD11C"/>

        </LinearLayout>

        <EditText
            android:id="@+id/txt_count"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_count"
            android:textColor="@color/white"
            android:textColorHint="@color/grey_w"
            android:textSize="18sp" />

<!--        <Button-->
<!--            android:id="@+id/btn_manual"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="10dp"-->
<!--            android:background="@android:color/holo_blue_dark"-->
<!--            android:text="Send Sms Manually"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:textSize="18sp" />-->

        <Button
            android:id="@+id/btn_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/curved_btn"
            android:text="@string/send_sms"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_whatsapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/curved_btn"
            android:text="@string/whatsapp"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:textSize="18sp" />

<!--        <Button-->
<!--            android:id="@+id/btn_whatsapp2"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:layout_marginEnd="10dp"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:background="@android:color/holo_blue_dark"-->
<!--            android:text="Send Each Word"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:textSize="18sp" />-->

    </LinearLayout>
</LinearLayout>