<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/black"
    app:cardElevation="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:paddingBottom="30dp">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/coin_gif"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/coin_b" />

        <TextView
            android:id="@+id/text_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congrats"
            android:layout_gravity="center_horizontal"
            android:textStyle="normal"
            android:fontFamily="@font/roboto_medium"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/text_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_earned"
            android:layout_gravity="center_horizontal"
            android:textStyle="normal"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/grey_w"
            android:layout_marginTop="5dp"/>

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:theme="@style/RatingBar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:progressTint="@color/colorPrimaryDark"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="20dp"
            android:id="@+id/review"
            android:layout_gravity="center_horizontal"
            android:hint="@string/review"
            android:textColorHint="@color/grey_w"
            android:textAllCaps="false"
            android:textColor="@color/grey_w"
            android:textSize="20sp"
            android:textStyle="normal"
            />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/curved_btn"
            android:backgroundTintMode="screen"
            android:text="@string/submit"
            android:textStyle="normal"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:textAlignment="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>


